--- a/src/GUI/HowToPlayGUI.form
+++ b/src/GUI/HowToPlayGUI.form
@@ -3,9 +3,11 @@
   <grid id="27dc6" binding="main_panel" layout-manager="GridLayoutManager" row-count="16" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="505" height="497"/>
+      <xy x="20" y="20" width="609" height="497"/>
     </constraints>
-    <properties/>
+    <properties>
+      <background color="-473999"/>
+    </properties>
     <border type="none"/>
     <children>
       <component id="df5a3" class="javax.swing.JLabel" binding="RecycleMania">
@@ -14,6 +16,7 @@
         </constraints>
         <properties>
           <font name="Pristina" size="72" style="1"/>
+          <foreground color="-8899840"/>
           <text value="        RecycleMania"/>
         </properties>
       </component>
@@ -132,29 +135,12 @@
           <text value=""/>
         </properties>
       </component>
-      <grid id="7f451" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-        <margin top="0" left="0" bottom="0" right="0"/>
-        <constraints>
-          <grid row="15" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties/>
-        <border type="none"/>
-        <children/>
-      </grid>
-      <grid id="c2397" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-        <margin top="0" left="0" bottom="0" right="0"/>
-        <constraints>
-          <grid row="15" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties/>
-        <border type="none"/>
-        <children/>
-      </grid>
       <component id="d2412" class="javax.swing.JButton" binding="backButton">
         <constraints>
           <grid row="15" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <background color="-2717424"/>
           <font name="Papyrus" size="16" style="1"/>
           <text value="Back"/>
         </properties>
@@ -166,6 +152,23 @@
         <properties>
           <font name="Papyrus" size="24" style="1"/>
           <text value="How to play!"/>
+        </properties>
+      </component>
+      <component id="c8e24" class="javax.swing.JLabel">
+        <constraints>
+          <grid row="15" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <foreground color="-8899840"/>
+          <text value="                                                                     "/>
+        </properties>
+      </component>
+      <component id="e57f7" class="javax.swing.JLabel">
+        <constraints>
+          <grid row="15" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="                                                                             "/>
         </properties>
       </component>
     </children>
