--- a/src/GUI/PlayGui.form
+++ b/src/GUI/PlayGui.form
@@ -25,7 +25,7 @@
         <border type="none"/>
         <children/>
       </grid>
-      <grid id="b9384" binding="word_or_image_panel" layout-manager="CardLayout" hgap="0" vgap="0">
+      <grid id="b9384" binding="word_or_image_panel" layout-manager="BorderLayout" hgap="0" vgap="0">
         <constraints>
           <grid row="1" column="0" row-span="1" col-span="11" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
